<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/CardView.Dark"
    tools:context=".MainActivity"
    android:background="@color/background_grey"
    >



    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="336dp"
        android:layout_height="129dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="188dp"
        android:layout_height="56dp"
        android:layout_marginTop="68dp"
        android:text="EXIT"
        android:textSize="20sp"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword5"
        app:strokeColor="@color/black" />

    <Button
        android:id="@+id/exitbtn"
        android:layout_width="182dp"
        android:layout_height="57dp"
        android:layout_marginTop="68dp"
        android:text="SIGNUP!"
        android:textSize="20sp"
        android:backgroundTint="@color/btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword5"
        app:layout_constraintVertical_bias="0.502"
        app:strokeColor="@color/black" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="195dp"
        android:layout_height="49dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:textColorHint="@color/White"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="@+id/editTextText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.737" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="195dp"
        android:layout_height="49dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:textColorHint="@color/White"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/lastname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.901" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="307dp"
        android:layout_height="46dp"
        android:layout_marginTop="380dp"
        android:ems="10"
        android:hint="@string/retype_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColorHint="@color/White"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="272dp"
        android:layout_height="44dp"
        android:layout_marginTop="264dp"
        android:ems="10"
        android:hint="@string/email"
        android:textColorHint="@color/White"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.374"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword5"
        android:layout_width="288dp"
        android:layout_height="51dp"
        android:layout_marginTop="316dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:textColorHint="@color/White"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="125dp"
        android:layout_height="53dp"
        android:layout_marginTop="464dp"
        android:text="MALE"
        android:textColor="@color/White"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="125dp"
        android:layout_height="53dp"
        android:layout_marginTop="464dp"
        android:text="FEMALE"
        android:textColor="@color/White"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLoginPrompt"
        android:layout_width="269dp"
        android:layout_height="41dp"
        android:layout_marginBottom="56dp"
        android:text="@string/already_have_account"
        android:textColor="@color/White"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" /> <!-- Set your color for the text here -->


</androidx.constraintlayout.widget.ConstraintLayout>